--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 [dependencies]
 config = "0.10.1"
 json = "0.12.4"
-reqwest = "0.10.8"
-serde = "1.0.116"
+reqwest = { version = "0.10.8", features = ["json"] }
+serde = {version = "1.0.116", features = ["derive"]}
 serde_json = "1.0.57"
 serenity = "0.9.0-rc.1"
 tokio = "0.2.22"
